@@ -33,14 +33,14 @@ public class BaseInput {
 
 	protected Map refMap = new HashMap();
 
-	protected short refId = 0;
+	protected short refId;
 
 	/**
 	 * Store an object into a map
 	 * @param obj
 	 */
 	public void storeReference(Object obj) {
-		refMap.put(new Short(refId++), obj);
+		refMap.put(Short.valueOf(refId++), obj);
 	}
 
 	/**
@@ -57,7 +57,7 @@ public class BaseInput {
 	 * @return Object
 	 */
 	protected Object getReference(short id) {
-		return refMap.get(new Short(id));
+		return refMap.get(Short.valueOf(id));
 	}
 
 }
